# RABBIT-Transcoding

./: .gitignore  CMakeLists.txt  README.md  compute_metrics.sh  decode.sh  transcode.sh  transcode_HM.sh  transcode_gpu.sh
cfg/common/: ctc-common-fast.cfg
cfg/sequence/: longdress_vox10-part.cfg  longdress_vox10_recon.cfg
source/app/PccAppMetrics/: PccAppMetrics.cpp
source/app/PccAppTranscoder/: CMakeLists.txt  PccAppTranscoder.cpp
source/app/PccAppVideoDecoder/: PccAppVideoDecoder.cpp
source/lib/PccLibBitstreamReader/source/: PCCBitstreamReader.cpp
source/lib/PccLibBitstreamWriter/source/: PCCBitstreamWriter.cpp
source/lib/PccLibDecoder/include/: PCCDecoder.h
source/lib/PccLibDecoder/source/: PCCDecoder.cpp  PCCVideoDecoder.cpp
source/lib/PccLibEncoder/include/: PCCEncoder.h
source/lib/PccLibEncoder/source/: PCCEncoder.cpp
source/lib/PccLibMetrics/include/: PCCMetrics.h
source/lib/PccLibMetrics/source/: PCCMetrics.cpp
source/lib/PccLibTranscoder/: CMakeLists.txt
source/lib/PccLibTranscoder/include/: PCCTranscoder.h  PCCTranscoderParameters.h
source/lib/PccLibTranscoder/source/: PCCTranscoder.cpp  PCCTranscoderParameters.cpp  PCCVideoEncoder.cpp
